[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/dialogs/load_dialog/LoadItem.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/dark/open_file.svg" type="Texture" id=2]
[ext_resource path="res://assets/themes/dark/delete.svg" type="Texture" id=3]
[ext_resource path="res://assets/themes/dark/share.svg" type="Texture" id=4]
[ext_resource path="res://assets/themes/dark/download.svg" type="Texture" id=5]

[node name="LoadItem" type="VBoxContainer"]
margin_right = 821.0
margin_bottom = 114.0
custom_constants/separation = 8
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 821.0
margin_bottom = 46.0
mouse_filter = 1
theme_type_variation = "ListItem"
toggle_mode = true
text = "Project name"
align = 0

[node name="ActionsContainer" type="HBoxContainer" parent="."]
visible = false
margin_top = 54.0
margin_right = 821.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 60 )
size_flags_vertical = 3

[node name="OpenButton" type="Button" parent="ActionsContainer"]
margin_right = 202.0
margin_bottom = 60.0
mouse_filter = 1
size_flags_horizontal = 3
theme_type_variation = "ListItem"
icon_align = 1

[node name="VBox" type="VBoxContainer" parent="ActionsContainer/OpenButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
custom_constants/separation = 0
alignment = 1

[node name="Icon" type="TextureRect" parent="ActionsContainer/OpenButton/VBox"]
margin_right = 203.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="Label" type="Label" parent="ActionsContainer/OpenButton/VBox"]
margin_top = 36.0
margin_right = 203.0
margin_bottom = 60.0
mouse_filter = 1
theme_type_variation = "Text"
text = "DIALOG_LOAD_BTN_OPEN"
align = 1
valign = 2

[node name="DownloadButton" type="Button" parent="ActionsContainer"]
margin_left = 206.0
margin_right = 408.0
margin_bottom = 60.0
mouse_filter = 1
size_flags_horizontal = 3
theme_type_variation = "ListItem"
icon_align = 1

[node name="VBox" type="VBoxContainer" parent="ActionsContainer/DownloadButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
custom_constants/separation = 0
alignment = 1

[node name="Icon" type="TextureRect" parent="ActionsContainer/DownloadButton/VBox"]
margin_right = 219.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="Label" type="Label" parent="ActionsContainer/DownloadButton/VBox"]
margin_top = 36.0
margin_right = 219.0
margin_bottom = 60.0
mouse_filter = 1
theme_type_variation = "Text"
text = "DIALOG_LOAD_BTN_DOWNLOAD"
align = 1
valign = 2

[node name="ShareButton" type="Button" parent="ActionsContainer"]
margin_left = 412.0
margin_right = 614.0
margin_bottom = 60.0
mouse_filter = 1
size_flags_horizontal = 3
theme_type_variation = "ListItem"
icon_align = 1

[node name="VBox" type="VBoxContainer" parent="ActionsContainer/ShareButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
custom_constants/separation = 0
alignment = 1

[node name="Icon" type="TextureRect" parent="ActionsContainer/ShareButton/VBox"]
margin_right = 203.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="Label" type="Label" parent="ActionsContainer/ShareButton/VBox"]
margin_top = 36.0
margin_right = 203.0
margin_bottom = 60.0
mouse_filter = 1
theme_type_variation = "Text"
text = "DIALOG_LOAD_BTN_SHARE"
align = 1
valign = 2

[node name="DeleteButton" type="Button" parent="ActionsContainer"]
margin_left = 618.0
margin_right = 821.0
margin_bottom = 60.0
mouse_filter = 1
size_flags_horizontal = 3
theme_type_variation = "ListItem"
icon_align = 1

[node name="VBox" type="VBoxContainer" parent="ActionsContainer/DeleteButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
custom_constants/separation = 0
alignment = 1

[node name="Icon" type="TextureRect" parent="ActionsContainer/DeleteButton/VBox"]
margin_right = 204.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="Label" type="Label" parent="ActionsContainer/DeleteButton/VBox"]
margin_top = 36.0
margin_right = 204.0
margin_bottom = 60.0
mouse_filter = 1
theme_type_variation = "Text"
text = "DIALOG_LOAD_BTN_DELETE"
align = 1
valign = 2

[connection signal="toggled" from="Button" to="." method="_on_Button_toggled"]
